# WindWhisper

./: .gitignore  Future Version Specifications.md  README.md  SPECIFICATIONS.md  WINDOGRAPHER_RIVAL_SPEC.md  docker-compose.yml  nginx.conf  requirements.txt  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_initial_tables.py  20260327_0002_change_logs.py  20260327_0003_power_curves.py  20260328_0004_workflows.py  20260402_0005_ai_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  action_executor.py  context.py  health.py  impact.py  llm_client.py  memory.py  orchestrator.py  provenance.py  router.py  tools.py  websocket_hub.py
backend/app/api/: __init__.py  analysis.py  datasets.py  export.py  import_engine.py  mcp.py  projects.py  qc.py  reports.py  workflows.py
backend/app/models/: __init__.py  ai.py  analysis_result.py  dataset.py  (+6 more)
backend/scripts/: generate_all_samples.py  generate_sample_workbook.py  vercel_build.py
backend/tests/: conftest.py  test_ai_agents.py  test_ai_client.py  test_ai_context.py  test_ai_health.py  test_ai_impact.py  test_ai_integration.py  test_ai_memory.py  test_ai_orchestrator.py  test_ai_provenance.py  test_ai_router.py  test_ai_tools.py  test_analysis.py  test_datasets.py  test_demo_seed.py  test_energy.py  test_export.py  test_import_engine.py  test_mcp.py  test_projects.py  test_qc.py  test_reports.py  test_sample_workflows.py  test_workflows.py
(+180 files in other folders)
