[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "windwhisper-backend"
version = "0.1.0"
description = "FastAPI backend for the WindWhisper wind resource analysis platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.30,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "openpyxl>=3.1,<4.0",
    "scipy>=1.12,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:'asyncio.get_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning:pytest_asyncio\\.plugin",
    "ignore:'asyncio.set_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning:pytest_asyncio\\.plugin",
]
